refactor: simplify stream collection and improve null handling in ProviderResource assembler